remove comments, fix spacing, remove console logs

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,5 @@
 body {
   margin: 0;
-  /*display: flex;
-  flex-direction: column;
-  min-height: 100vh;*/
-  /*background-color: #000000;*/
 }
 
 app-root {
